--- a/SimCLR.ipynb
+++ b/SimCLR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def set_seed(seed = 16):\n",
     "    np.random.seed(seed)\n",
     "    torch.manual_seed(seed)"
@@ -95,10 +94,7 @@
     "vallabels = labels[40000:]\n",
     "MEAN = np.mean(trimages/255.0,axis=(0,2,3),keepdims=True)\n",
     "STD = np.std(trimages/255.0,axis=(0,2,3),keepdims=True)\n",
-    "print(MEAN)\n",
-    ">>> [[[[0.49145363]]    [[0.48206213]]    [[0.44622512]]]]\n",
-    "print(STD)\n",
-    ">>> [[[[0.24716829]]    [[0.24370658]]    [[0.26169213]]]]"
+    "print(MEAN)"
    ]
   },
   {
@@ -123,9 +119,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91ad3c23498d49659b72017b285cfe79",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/170498071 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "transform = transforms.Compose(\n",
     "    [transforms.ToTensor(),\n",
@@ -133,12 +159,12 @@
     "\n",
     "batch_size = 4\n",
     "\n",
-    "trainset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
+    "trainset = datasets.CIFAR10(root='./data', train=True,\n",
     "                                        download=True, transform=transform)\n",
     "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batch_size,\n",
     "                                          shuffle=True, num_workers=2)\n",
     "\n",
-    "testset = torchvision.datasets.CIFAR10(root='./data', train=False,\n",
+    "testset = datasets.CIFAR10(root='./data', train=False,\n",
     "                                       download=True, transform=transform)\n",
     "testloader = torch.utils.data.DataLoader(testset, batch_size=batch_size,\n",
     "                                         shuffle=False, num_workers=2)\n",
@@ -156,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,13 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SimCLR_Loss(nn.Module):\n",
     "    def __init__(self, batch_size, temperature):\n",
-    "        super(Imrealun, self).__init__()\n",
+    "        super(SimCLR_Loss, self).__init__()\n",
     "        self.batch_size = batch_size\n",
     "        self.temperature = temperature\n",
     "\n",
@@ -320,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,9 +511,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 2.0000e-02.\n",
+      "Epoch     0: adjusting learning rate of group 0 to 2.0000e-01.\n"
+     ]
+    }
+   ],
    "source": [
     "#OPTMIZER\n",
     "optimizer = LARS(\n",
@@ -510,12 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_model(model, optimizer, scheduler, current_epoch, name):\n",
-    "    out = os.path.join('/content/saved_models/',name.format(current_epoch))\n",
+    "    out = os.path.join('./cifar/content/saved_models/',name.format(current_epoch))\n",
     "\n",
     "    torch.save({'model_state_dict': model.state_dict(),\n",
     "                'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -553,12 +588,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_model(model, optimizer, scheduler, current_epoch, name):\n",
-    "    out = os.path.join('/content/saved_models/',name.format(current_epoch))\n",
+    "    out = os.path.join('./cifar/content/saved_models/',name.format(current_epoch))\n",
     "\n",
     "    torch.save({'model_state_dict': model.state_dict(),\n",
     "                'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -596,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,9 +665,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'trimages' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1751/1502954543.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0mdg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDSDataGen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_classes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mdl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdrop_last\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'trimages' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class DSDataGen(Dataset):\n",
     "    def __init__(self, phase, imgarr,labels,num_classes):\n",
@@ -670,7 +717,7 @@
     "        frame = frame / 255.0\n",
     "        frame = (frame-MEAN)/STD\n",
     "        return frame\n",
-    "view rawsimclr_ds_datagen.py hosted with ❤ by GitHub\n",
+    "\n",
     "dg = DSDataGen('train', trimages, trlabels, num_classes=10)\n",
     "\n",
     "dl = DataLoader(dg,batch_size = 32, drop_last = True)\n",
@@ -682,9 +729,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dsmodel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1751/329838181.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mnum_cl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mdsoptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparams\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mparams\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdsmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmomentum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mlr_scheduler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlr_scheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStepLR\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdsoptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.98\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlast_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dsmodel' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Some more declarations\n",
     "tr_ep_loss = []\n",
@@ -697,7 +756,7 @@
     "\n",
     "EPOCHS = 10\n",
     "num_cl = 10\n",
-    "\n",
+    "dsmodel = DSModel\n",
     "dsoptimizer = torch.optim.SGD([params for params in dsmodel.parameters() if params.requires_grad],lr = 0.01, momentum = 0.9)\n",
     "\n",
     "lr_scheduler = torch.optim.lr_scheduler.StepLR(dsoptimizer, step_size=1, gamma=0.98, last_epoch=-1, verbose = True)\n",
@@ -842,13 +901,21 @@
    "hash": "f44a392e09d1bb9477de132905dd7ad0f7bbaeeffcb9fda9d53bc480fa8090eb"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('pytorch')",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   },
   "orig_nbformat": 4
  },
