--- a/VM.ipynb
+++ b/VM.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CIFAR10  cifar\tdata  exp  mat\tshingan-ml  snap\n"
+      "CIFAR10\t\tlr_find_temp_model_14e43f42-cb92-45d9-a2a8-9591d0fd0bee.ckpt\n",
+      "cifar\t\tmat\n",
+      "data\t\tshingan-ml\n",
+      "exp\t\tsnap\n",
+      "lightning_logs\n"
      ]
     }
    ],
@@ -19,11 +23,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -r lr_find_temp_model_f871fc86-49fa-4b1e-9e8f-42abd5deab11.ckpt"
+    "!rm -r lr_find_temp_model_14e43f42-cb92-45d9-a2a8-9591d0fd0bee.ckpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "version_0  version_1  version_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd lightning_logs\n",
+    "!ls lightning_logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wandb login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-5f6898804ecbe17e\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-5f6898804ecbe17e\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%reload_ext tensorboard\n",
+    "%tensorboard --logdir=lightning_logs/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting wandb\n",
+      "  Downloading wandb-0.12.15-py2.py3-none-any.whl (1.8 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.8 MB 4.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: PyYAML in /opt/conda/lib/python3.7/site-packages (from wandb) (5.4.1)\n",
+      "Requirement already satisfied: protobuf>=3.12.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (3.18.0)\n",
+      "Requirement already satisfied: Click!=8.0.0,>=7.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (8.0.1)\n",
+      "Requirement already satisfied: requests<3,>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (2.25.1)\n",
+      "Requirement already satisfied: docker-pycreds>=0.4.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (0.4.0)\n",
+      "Requirement already satisfied: psutil>=5.0.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (5.8.0)\n",
+      "Collecting sentry-sdk>=1.0.0\n",
+      "  Downloading sentry_sdk-1.5.10-py2.py3-none-any.whl (144 kB)\n",
+      "\u001b[K     |████████████████████████████████| 144 kB 52.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting setproctitle\n",
+      "  Downloading setproctitle-1.2.3-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (29 kB)\n",
+      "Requirement already satisfied: GitPython>=1.0.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (3.1.23)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /opt/conda/lib/python3.7/site-packages (from wandb) (2.8.2)\n",
+      "Collecting shortuuid>=0.5.0\n",
+      "  Downloading shortuuid-1.0.8-py3-none-any.whl (9.5 kB)\n",
+      "Collecting pathtools\n",
+      "  Downloading pathtools-0.1.2.tar.gz (11 kB)\n",
+      "Requirement already satisfied: six>=1.13.0 in /opt/conda/lib/python3.7/site-packages (from wandb) (1.16.0)\n",
+      "Collecting promise<3,>=2.0\n",
+      "  Downloading promise-2.3.tar.gz (19 kB)\n",
+      "Requirement already satisfied: importlib-metadata in /opt/conda/lib/python3.7/site-packages (from Click!=8.0.0,>=7.0->wandb) (4.8.1)\n",
+      "Requirement already satisfied: gitdb<5,>=4.0.1 in /opt/conda/lib/python3.7/site-packages (from GitPython>=1.0.0->wandb) (4.0.7)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/conda/lib/python3.7/site-packages (from GitPython>=1.0.0->wandb) (4.2.0)\n",
+      "Requirement already satisfied: smmap<5,>=3.0.1 in /opt/conda/lib/python3.7/site-packages (from gitdb<5,>=4.0.1->GitPython>=1.0.0->wandb) (3.0.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (2021.10.8)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (4.0.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests<3,>=2.0.0->wandb) (1.26.6)\n",
+      "Requirement already satisfied: zipp>=0.5 in /opt/conda/lib/python3.7/site-packages (from importlib-metadata->Click!=8.0.0,>=7.0->wandb) (3.5.0)\n",
+      "Building wheels for collected packages: promise, pathtools\n",
+      "  Building wheel for promise (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for promise: filename=promise-2.3-py3-none-any.whl size=21502 sha256=2c9b414d451444a301d486a6f2bb9ac3cb8e7ef64743d86be99853ce12a49669\n",
+      "  Stored in directory: /root/.cache/pip/wheels/29/93/c6/762e359f8cb6a5b69c72235d798804cae523bbe41c2aa8333d\n",
+      "  Building wheel for pathtools (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for pathtools: filename=pathtools-0.1.2-py3-none-any.whl size=8807 sha256=573d31c9fe1bec3b3de83243ae62aada880446f47a4cbe3a5fd5ece3723c4680\n",
+      "  Stored in directory: /root/.cache/pip/wheels/3e/31/09/fa59cef12cdcfecc627b3d24273699f390e71828921b2cbba2\n",
+      "Successfully built promise pathtools\n",
+      "Installing collected packages: shortuuid, setproctitle, sentry-sdk, promise, pathtools, wandb\n",
+      "Successfully installed pathtools-0.1.2 promise-2.3 sentry-sdk-1.5.10 setproctitle-1.2.3 shortuuid-1.0.8 wandb-0.12.15\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install wandb"
    ]
   }
  ],
